# Beyond-CVaR

./: .flake8  .gitignore  README.md  Robust mean estimation.py  pyproject.toml
.github/workflows/: ci.yml
src/beyond_cvar/: __init__.py  cpt_value_estimation.py  excess_risk_over_n_srm.py  excess_risk_over_t_srm.py  prediction_error_cpt.py  prediction_error_srm.py
tests/: test_excess_risk_over_n_srm_examples.py  test_excess_risk_over_t_srm_examples.py  test_imports.py  test_prediction_error_cpt_examples.py  test_prediction_error_srm_examples.py
