[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "beyond-cvar"
version = "0.1.0"
description = "Beyond-CVaR: prediction error and SRM risk metrics"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "El Mehdi Haress" }]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

