[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beyond-cvar"
version = "0.1.0"
description = "Beyond-CVaR utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "matplotlib",
  "statsmodels",
  "numpy",
  "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["beyond_cvar*"]

